--- a/Form.Main.resx
+++ b/Form.Main.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
+  <!-- 
     Microsoft ResX Schema 
-
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="button_browse.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
@@ -195,9 +195,9 @@
   <data name="&gt;&gt;groupBox_path.ZOrder" xml:space="preserve">
     <value>6</value>
   </data>
-  <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>177, 21</value>
-  </metadata>
+  </data>
   <data name="comboBox_channel.Items" xml:space="preserve">
     <value>[hk4e_1_0] 官方服</value>
   </data>
@@ -373,7 +373,7 @@
     <value>2</value>
   </data>
   <data name="textBox_update.Text" xml:space="preserve">
-    <value>[waiting] 等待检查更新..</value>
+    <value>[等待中] 等待检查更新..</value>
   </data>
   <data name="&gt;&gt;textBox_update.Name" xml:space="preserve">
     <value>textBox_update</value>
@@ -696,12 +696,12 @@
   <data name="&gt;&gt;groupBox_config.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="timer_RAM.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="timer_RAM.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>17, 17</value>
-  </metadata>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="$this.Localizable" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
+  </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>7, 17</value>
   </data>
@@ -734,5 +734,44 @@
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="error.failedCheckUpdate" xml:space="preserve">
+    <value>检查更新失败</value>
+  </data>
+  <data name="error.failedGetVersion" xml:space="preserve">
+    <value>无法获取版本信息</value>
+  </data>
+  <data name="error.preDownloadNotFound" xml:space="preserve">
+    <value>未找到可用的预下载</value>
+  </data>
+  <data name="error.resourceNotFound" xml:space="preserve">
+    <value>未找到可下载的资源</value>
+  </data>
+  <data name="mbox.channelNotFound" xml:space="preserve">
+    <value>没有识别到游戏渠道，请手动选择！</value>
+  </data>
+  <data name="mbox.copyS" xml:space="preserve">
+    <value>复制成功</value>
+  </data>
+  <data name="mbox.saveF" xml:space="preserve">
+    <value>保存失败</value>
+  </data>
+  <data name="mbox.saveS" xml:space="preserve">
+    <value>保存成功</value>
+  </data>
+  <data name="mbox.title.notice" xml:space="preserve">
+    <value>提示</value>
+  </data>
+  <data name="tbox.checkingUpdate" xml:space="preserve">
+    <value>[执行中] 正在检查更新..</value>
+  </data>
+  <data name="tbox.newFound" xml:space="preserve">
+    <value>有新版本可下载</value>
+  </data>
+  <data name="tbox.updated" xml:space="preserve">
+    <value>当前已是最新版本，若资源缺失可尝试修复器</value>
+  </data>
+  <data name="tbox.error" xml:space="preserve">
+    <value>出错</value>
   </data>
 </root>
